--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 applications:
 - disk_quota: 1024M
-  host: foodmood
-  name: foodmood
+  host: moodyfoodie
+  name: moodyfoodie
   command: node app.js
   path: .
   domain: mybluemix.net
