Landing page done

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "body-parser": "1.13.2",
     "cloudant": "*",
     "connect-multiparty": "1.2.5",
+    "consolidate": "^0.13.1",
+    "dustjs-linkedin": "^2.7.2",
     "ejs": "*",
     "errorhandler": "1.4.1",
     "express": "4.12.x",
